--- a/src/App.css
+++ b/src/App.css
@@ -3,40 +3,35 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-family: Inter,sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.title {
+  font-size:3.5em;
+  animation: fadeIn 1s;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pop-text {
+  color: #5658dd;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.white-text {
+  color: #ffffff;
 }
 
-.card {
-  padding: 2em;
+.subtitle {
+  font-size:1.5rem;
+  color: #9ca9b3;
+  animation: delayedFadeIn 1s;
 }
 
-.read-the-docs {
-  color: #888;
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@keyframes delayedFadeIn {
+  0% {opacity: 0}
+  50% {opacity: 0;}
+  100% {opacity: 1;}
 }
